test/sema/exercise/struct_redeclared.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {
  x: number,
}

fn S(): void {
}

struct S {
// CHECK: [[# @LINE - 1 ]]:1: error: redeclaration of 'S'
  x: number,
}

fn main(): void {
}
